# glibc

./: .gitignore  CMakeLists.txt  main.cpp  test1.S
ASM/: build.sh  test.S  test.c
CPU/: testCpu.cpp
aio/: aiotest.cpp
common/: common.cpp  common.h
debugSupport/: testDebuggingSupport.cpp
etc/: setenv
jump/: testJump.cpp
libuvtTest/: CMakeLists.txt  uvTest.cpp
masterAndSlave/: master.cpp  masterAndSlave.cpp  slave.cpp
mem/: memtest.cpp
pipe/: pipeTest.cpp
resourceUsageAndLimitation/: testResourceUsageAndLimitation.cpp
sbin/: run.sh
signal/: testSignal.cpp
singleTest/: CMakeLists.txt  recv.cpp  send.cpp  tcpClient.cpp  tcpServer.cpp
sockets/: testSockets.cpp
ucontext/: ucontext.cpp
